- winio.c:
  nanoget_repaint()
	- Rename parameter inputbuf to buf, for consistency. (DLR)
  reset_cursor()
	- Rename variable x to xpt, to avoid confusion. (DLR)
  update_line()
	- Remove now-unneeded logic that set the index parameter to zero
	  if the fileptr parameter didn't point to current. (DLR)
  edit_add()
	- Rename to edit_draw(), and rename parameter yval to line.
	  (DLR)
  do_yesno()
	- Make mouse clicks on the Yes/No/All shortcuts work properly
	  when the MORE_SPACE flag is set. (DLR)
- configure.ac:
	- Clarify description of --disable-speller. (DLR)
	- Disable wrapping entirely when --enable-tiny is used, as it
	  matches the FAQ, it makes nano even smaller, and it eliminates
	  the need for --disable-wrapping-as-root in that case (in which
	  it's impossible to turn wrapping back on without nanorc
	  support). (DLR)
- README.CVS:
	- Mention that the minimum required version of texinfo is 4.0,
	  since that's the first version that supports generating HTML.
	  (DLR)
- doc/faq.html:
	- Add a new section 5.3 to explain the status of nano's Unicode
	  support. (Mike Frysinger, minor tweaks by DLR)
	- Clarify section 5.3 to better explain how to enable Unicode
	  support, and remove the mention of quirks, since they turned
	  out to not be a nano problem. (Mike Frysinger and DLR)
- doc/nano.1:
	- Make one non-bold instance of "nano" bold, for consistency.
	  (DLR)
- doc/rnano.1:
	- Add rnano.1 manpage from Thijs Kinkhorst. (Jordi)  DLR: Merge
	  a few minor updates from nano.1.
- doc/nano.texi:
	- Fix inconsistent wording and punctuation. (DLR)
	- Add missing configure options. (Mike Frysinger, minor tweaks
	  by DLR)
	- Sort the configure options more consistently, and add missing
	  --disable-utf8 option. (DLR)
	- Move --disable-wrapping above --enable-tiny, as the latter now
	  turns it on. (DLR)
- doc/nanorc.sample:
	- Tweak the "c-file" regex for characters to properly accept
	  '\"' and reject '"' and '''. (DLR)
- doc/texinfo/Makefile.am: