@@ -245,6 +245,8 @@ CVS code -
   edit_add()
 	- Rename to edit_draw(), and rename parameter yval to line.
 	  (DLR)
+  do_cursorpos()
+	- Remove unneeded assert. (DLR)
   do_yesno()
 	- Make mouse clicks on the Yes/No/All shortcuts work properly
 	  when the MORE_SPACE flag is set. (DLR)
